// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CategoriesFilter rendering tests CategoriesFilter - categories not selected - test 1`] = `
<div>
  <div
    class="space-y-2"
    data-testid="categories-filter"
  >
    <label
      class="text-xs font-semibold text-slate-700 uppercase tracking-wide"
      data-testid="filter-label"
    >
      Kategorien
    </label>
    <div
      aria-controls="radix-_r_6_"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="w-full min-h-[42px] cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 hover:bg-white hover:border-slate-300 px-3 py-2 flex items-center flex-wrap gap-2 transition-all shadow-sm"
      data-slot="popover-trigger"
      data-state="closed"
      data-testid="popover-trigger"
      type="button"
    >
      <span
        class="text-slate-400 text-sm"
        data-testid="no-selected-category"
      >
        Kategorien auswählen...
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m7 15 5 5 5-5"
        />
        <path
          d="m7 9 5-5 5 5"
        />
      </svg>
    </div>
    <div
      data-testid="mock-react-presence"
    >
      <div
        data-testid="mock-react-portal"
      >
        <div
          data-testid="mock-react-presence"
        >
          <div
            data-radix-popper-content-wrapper=""
            style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
          >
            <div
              class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border outline-hidden w-72 p-0 shadow-lg border-slate-200"
              data-align="center"
              data-side="bottom"
              data-slot="popover-content"
              data-state="closed"
              id="radix-_r_6_"
              role="dialog"
              style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
              tabindex="-1"
            >
              <div
                class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
                cmdk-root=""
                data-slot="command"
                tabindex="-1"
              >
                <label
                  cmdk-label=""
                  for="radix-_r_9_"
                  id="radix-_r_8_"
                  style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
                />
                <div
                  aria-label="Suggestions"
                  class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
                  cmdk-list=""
                  data-slot="command-list"
                  data-testid="category-options"
                  id="radix-_r_7_"
                  role="listbox"
                  tabindex="-1"
                >
                  <div
                    cmdk-list-sizer=""
                  >
                    <div
                      class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                      cmdk-group=""
                      data-slot="command-group"
                      data-value="undefined"
                      role="presentation"
                    >
                      <div
                        cmdk-group-items=""
                        role="group"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="true"
                          class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                          cmdk-item=""
                          data-disabled="false"
                          data-selected="true"
                          data-slot="command-item"
                          data-testid="category-option-category-1"
                          data-value="Category 1"
                          id="radix-_r_c_"
                          role="option"
                        >
                          <div
                            class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center border-slate-300"
                          />
                          <span
                            class="text-sm font-medium text-slate-700"
                          >
                            Category 1
                          </span>
                        </div>
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                          cmdk-item=""
                          data-disabled="false"
                          data-selected="false"
                          data-slot="command-item"
                          data-testid="category-option-category-2"
                          data-value="Category 2"
                          id="radix-_r_d_"
                          role="option"
                        >
                          <div
                            class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center border-slate-300"
                          />
                          <span
                            class="text-sm font-medium text-slate-700"
                          >
                            Category 2
                          </span>
                        </div>
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                          cmdk-item=""
                          data-disabled="false"
                          data-selected="false"
                          data-slot="command-item"
                          data-testid="category-option-category-3"
                          data-value="Category 3"
                          id="radix-_r_e_"
                          role="option"
                        >
                          <div
                            class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center border-slate-300"
                          />
                          <span
                            class="text-sm font-medium text-slate-700"
                          >
                            Category 3
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CategoriesFilter rendering tests CategoriesFilter - categories selected - test 1`] = `
<div>
  <div
    class="space-y-2"
    data-testid="categories-filter"
  >
    <label
      class="text-xs font-semibold text-slate-700 uppercase tracking-wide"
      data-testid="filter-label"
    >
      Kategorien
    </label>
    <div
      aria-controls="radix-_r_f_"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="w-full min-h-[42px] cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 hover:bg-white hover:border-slate-300 px-3 py-2 flex items-center flex-wrap gap-2 transition-all shadow-sm"
      data-slot="popover-trigger"
      data-state="closed"
      data-testid="popover-trigger"
      type="button"
    >
      <span
        class="justify-center rounded-full text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-secondary/90 flex items-center gap-1.5 bg-gradient-to-r from-blue-50 to-blue-100 text-blue-700 border border-blue-200 hover:bg-blue-100 px-2.5 py-1"
        data-slot="badge"
        data-testid="selected-category-category-1"
      >
        <span
          class="font-medium"
        >
          Category 1
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-x cursor-pointer hover:text-blue-900 transition-colors"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </span>
      <span
        class="justify-center rounded-full text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-secondary/90 flex items-center gap-1.5 bg-gradient-to-r from-blue-50 to-blue-100 text-blue-700 border border-blue-200 hover:bg-blue-100 px-2.5 py-1"
        data-slot="badge"
        data-testid="selected-category-category-2"
      >
        <span
          class="font-medium"
        >
          Category 2
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-x cursor-pointer hover:text-blue-900 transition-colors"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m7 15 5 5 5-5"
        />
        <path
          d="m7 9 5-5 5 5"
        />
      </svg>
    </div>
    <div
      data-testid="mock-react-presence"
    >
      <div
        data-testid="mock-react-portal"
      >
        <div
          data-testid="mock-react-presence"
        >
          <div
            data-radix-popper-content-wrapper=""
            style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
          >
            <div
              class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border outline-hidden w-72 p-0 shadow-lg border-slate-200"
              data-align="center"
              data-side="bottom"
              data-slot="popover-content"
              data-state="closed"
              id="radix-_r_f_"
              role="dialog"
              style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
              tabindex="-1"
            >
              <div
                class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
                cmdk-root=""
                data-slot="command"
                tabindex="-1"
              >
                <label
                  cmdk-label=""
                  for="radix-_r_i_"
                  id="radix-_r_h_"
                  style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
                />
                <div
                  aria-label="Suggestions"
                  class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
                  cmdk-list=""
                  data-slot="command-list"
                  data-testid="category-options"
                  id="radix-_r_g_"
                  role="listbox"
                  tabindex="-1"
                >
                  <div
                    cmdk-list-sizer=""
                  >
                    <div
                      class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                      cmdk-group=""
                      data-slot="command-group"
                      data-value="undefined"
                      role="presentation"
                    >
                      <div
                        cmdk-group-items=""
                        role="group"
                      >
                        <div
                          aria-disabled="false"
                          aria-selected="true"
                          class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                          cmdk-item=""
                          data-disabled="false"
                          data-selected="true"
                          data-slot="command-item"
                          data-testid="category-option-category-1"
                          data-value="Category 1"
                          id="radix-_r_l_"
                          role="option"
                        >
                          <div
                            class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center bg-blue-600 border-blue-600"
                          >
                            <div
                              class="w-2 h-2 bg-white rounded-sm"
                            />
                          </div>
                          <span
                            class="text-sm font-medium text-slate-700"
                          >
                            Category 1
                          </span>
                        </div>
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                          cmdk-item=""
                          data-disabled="false"
                          data-selected="false"
                          data-slot="command-item"
                          data-testid="category-option-category-2"
                          data-value="Category 2"
                          id="radix-_r_m_"
                          role="option"
                        >
                          <div
                            class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center bg-blue-600 border-blue-600"
                          >
                            <div
                              class="w-2 h-2 bg-white rounded-sm"
                            />
                          </div>
                          <span
                            class="text-sm font-medium text-slate-700"
                          >
                            Category 2
                          </span>
                        </div>
                        <div
                          aria-disabled="false"
                          aria-selected="false"
                          class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                          cmdk-item=""
                          data-disabled="false"
                          data-selected="false"
                          data-slot="command-item"
                          data-testid="category-option-category-3"
                          data-value="Category 3"
                          id="radix-_r_n_"
                          role="option"
                        >
                          <div
                            class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center border-slate-300"
                          />
                          <span
                            class="text-sm font-medium text-slate-700"
                          >
                            Category 3
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CategoriesFilter rendering tests CategoriesFilter - category options undefined - test 1`] = `
<div>
  <div
    class="space-y-2"
    data-testid="categories-filter"
  >
    <label
      class="text-xs font-semibold text-slate-700 uppercase tracking-wide"
      data-testid="filter-label"
    >
      Kategorien
    </label>
    <div
      aria-controls="radix-_r_0_"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="w-full min-h-[42px] cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 hover:bg-white hover:border-slate-300 px-3 py-2 flex items-center flex-wrap gap-2 transition-all shadow-sm"
      data-slot="popover-trigger"
      data-state="closed"
      data-testid="popover-trigger"
      type="button"
    >
      <span
        class="text-slate-400 text-sm"
        data-testid="no-selected-category"
      >
        Kategorien auswählen...
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m7 15 5 5 5-5"
        />
        <path
          d="m7 9 5-5 5 5"
        />
      </svg>
    </div>
    <div
      data-testid="mock-react-presence"
    >
      <div
        data-testid="mock-react-portal"
      >
        <div
          data-testid="mock-react-presence"
        >
          <div
            data-radix-popper-content-wrapper=""
            style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
          >
            <div
              class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border outline-hidden w-72 p-0 shadow-lg border-slate-200"
              data-align="center"
              data-side="bottom"
              data-slot="popover-content"
              data-state="closed"
              id="radix-_r_0_"
              role="dialog"
              style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
              tabindex="-1"
            >
              <div
                class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
                cmdk-root=""
                data-slot="command"
                tabindex="-1"
              >
                <label
                  cmdk-label=""
                  for="radix-_r_3_"
                  id="radix-_r_2_"
                  style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
                />
                <div
                  aria-label="Suggestions"
                  class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
                  cmdk-list=""
                  data-slot="command-list"
                  data-testid="category-options"
                  id="radix-_r_1_"
                  role="listbox"
                  tabindex="-1"
                >
                  <div
                    cmdk-list-sizer=""
                  >
                    <div
                      class="py-6 text-sm text-slate-500"
                      cmdk-empty=""
                      data-slot="command-empty"
                      role="presentation"
                    >
                      Keine Kategorien gefunden.
                    </div>
                    <div
                      class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                      cmdk-group=""
                      data-slot="command-group"
                      data-value="undefined"
                      role="presentation"
                    >
                      <div
                        cmdk-group-items=""
                        role="group"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CategoriesFilter rendering tests CategoriesFilter - filtersContext null - test 1`] = `<div />`;
